initiate virtual painter with hands

--- a/Virtual Paint/Virtual Paint.vcxproj
+++ b/Virtual Paint/Virtual Paint.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Virtual Painter.cpp" />
+    <ClCompile Include="hands-painter.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
